# option_monitor2

./: main.py  pyproject.toml
examples/data/: feriados_nacionais.csv  petr_options_chain_3.xlsx  petr_options_chain_4.xlsx  petr_options_chain_test.xlsx  ~$petr_options_chain_test.xlsx
scratch/: scratch.ipynb
src/core/entities/: black_scholes.py  iv_calc.py  option.py
src/core/greeks/: greeks_calculation.py
src/core/interpolation_single_expiry/: cubic_spline.py  svi.py  svi_redo.py
src/core/surfaces/: ssvi.py  ssvi2.py
src/core/visualization/: plotters2.py  plottters.py
src/data_fetchers/: holiday_df_reader.py
src/data_fetchers.py/: excel_reader.py
src/filters/: bounds.py  option_filters.py
src/orchestrators/: df_creator.py  single_expiry_fitting.py  slice_by_slice_fit.py
src/utils/: option_data_calc.py
